# temperature-tracker

./: .gitignore  HANDOFF.md  README.md  config.py  conftest.py  pyproject.toml
.github/workflows/: heat-data.yml  heat-publish.yml
data/processed/: feelslike_counties.csv  feelslike_counties.geojson  feelslike_points.csv  heat_counties.csv  heat_counties.geojson  heat_points.csv  warmnight_counties.csv  warmnight_counties.geojson  warmnight_points.csv
data/reference/: counties.geojson  places.csv
notebooks/: 01_data_analysis.ipynb
scripts/: build_heat.py  fetch_ndfd.py  make_reference.py  validate_live.py
tests/: test_build_heat.py  test_heat.py
utils/: __init__.py  heat.py  http.py
viewer/: index.html
