[project]
name = "temperature-tracker"
version = "1.0.0"
description = "NDFD heat-forecast data pipeline: fetch, reformat, publish map-ready GeoJSON 3x daily"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
# Everything the pipeline needs in one shot: `uv sync --extra heat`.
# pygrib also needs the system eccodes C library (macOS: `brew install eccodes`;
# Debian/Ubuntu: `apt-get install libeccodes-dev`).
heat = [
    "pygrib>=2.1.5",
    "scipy>=1.11",
    "geopandas>=1.0.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "tzdata>=2024.1",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
